2007-08-08  Werner Koch  <wk@g10code.com>

	* configure.ac: Use $host and not $target.  Reported by Peter
	Eisentraut .

2007-07-04  Werner Koch  <wk@g10code.com>

	Released 1.0.2.
	
	* configure.ac: Bumped LT version to C17/A9/R2.

	Changed license to GPLv3.

	* COPYING: Updated to GPLv3.

	* config.guess, config.sub: Updated from Savannah CVS and switched
	license to GPLv3+ and the old exception.

	* acinclude.m4: Remove.
	* Makefile.am (SUBDIRS): Include m4.
	* m4/gnupg-typedef.m4: New.
	* m4/Makefile.am: New.

2007-06-15  Werner Koch  <wk@g10code.com>

	* autogen.sh: Use = and not == in test to be POSIXly correct.

2007-05-29  Werner Koch  <wk@g10code.com>

	* configure.ac (AC_LIBTOOL_WIN32_DLL): New.
	(HAVE_W32_SYSTEM): New.
	(BUILD_REVISION, BUILD_TIMESTAMP, BUILD_FILEVERSION): New.
	(AC_CANONICAL_TARGET): New.

	* autogen.sh: Add Option --force.  Modernized cross compiler
	selection for --build-w32.

2007-05-24  Werner Koch  <wk@g10code.com>

	* configure.ac: Use -Wpointer-arith if possible.

2007-04-06  Werner Koch  <wk@g10code.com>

	* configure.ac: Require libgpg-error 1.4.

2006-11-29  Werner Koch  <wk@g10code.com>

	Released 1.0.1.
	
	* configure.ac: Bumped LT version to C17/A9/R1.

	* gl/dummyobj.c: New.

2006-11-15  Werner Koch  <wk@g10code.com>

	* autogen.sh: Add convenience option --build-amd64.

2006-10-20  Werner Koch  <wk@g10code.com>

	* Makefile.am (stowinstall): New convenience target.

2006-08-31  Werner Koch  <wk@g10code.com>

	Released 1.0.0.
	
	* configure.ac: Bumped LT version to C17/A9/R0.
	
	* configure.ac: Require libgpg-error 1.2. Removed test on
	GPG_ERR_UNKNOWN_CRIT_EXTN.

2006-08-01  Werner Koch  <wk@g10code.com>

	Released 0.9.16.
	
	* configure.ac: Bumped LT version to C16/A8/R0.

	* configure.ac: Changed to new style auto-svn init.

2006-06-20  Werner Koch  <wk@g10code.com>

	Released 0.9.15.
	
	* configure.ac: Bumbed LT version to C15/A7/R2.

2006-05-16  Werner Koch  <wk@g10code.com>

	Released 0.9.14.
	