@@ -1,6 +1,15 @@
+2007-11-07  Werner Koch  <wk@g10code.com>
+
+	* cms.c (build_signed_data_attribute): Reset ATTRIDX for new
+	signers. Use xfree and not free.
+
 2007-11-03  Moritz Schulte  <moritz@g10code.com>
 
 	* ksba.h: Include <stdio.h>, since FILE* is used.
+
+2007-08-08  Werner Koch  <wk@g10code.com>
+
+	* crl.c (ksba_crl_get_update_times): Require only THIS_UPDATE.
 
 2007-07-04  Werner Koch  <wk@g10code.com>
 
