@@ -1,3 +1,7 @@
+2007-08-08  Werner Koch  <wk@g10code.com>
+
+	* t-common.h (print_sexp_hex): New.
+
 2007-07-04  Werner Koch  <wk@g10code.com>
 
 	Changed license to GPLv3.
